# claude-opencode-bridge

./: .gitignore  CONTRIBUTING.md  PROJECT.md  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
claude_opencode_bridge/: __init__.py  protocol.py  server.py  sessions.py
docs/: architecture.md  protocol.md  release-checklist.md  troubleshooting.md
examples/: launchd.plist  opencode.json  zshrc-wrapper.sh
scripts/: check-no-secrets.sh  doctor.sh  install-git-hooks.sh  install-macos.sh  smoke-session.sh  uninstall-macos.sh
skills/opencode-first-party-claude-bridge/: SKILL.md
tests/: test_protocol.py  test_server.py  test_sessions.py
